fixed scroll and some text changes

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                         <li><a href="#skills">Skills</a></li>
                         <li><a href="#experience">Experience</a></li>
                         <li><a href="#education">Education</a></li>
+                        <li><a href="#hobbies">Hobbies</a></li>
                         <li><a href="#personal-info">Personal Information</a></li>
                     </ul>
 
@@ -36,6 +37,7 @@
                         <li><a href="#skills" >Skills</a></li>
                         <li><a href="#experience" >Experience</a></li>
                         <li><a href="#education">Education</a></li>
+                        <li><a href="#hobbies">Hobbies</a></li>
                         <li><a href="#personal-info" >Personal Information</a></li>
                     </ul>
 
@@ -52,9 +54,9 @@
             <section id="about">
                 <h2>About Me</h2>
                 <p>
-                    I am a <b>Computer Science student at XYZ University</b> with a passion for software development and programming.
-                    I have experience in web development and database management, and I am proficient in HTML, CSS, JavaScript,
-                    React, Angular, MySQL, and MongoDB. I am seeking opportunities to further develop my skills and contribute
+                    I am a <b>3-rd year Computer Science student at BUT</b> with a passion for software development and programming.
+                    I have experience in developing applications using a variety of programming languages, including Java, Python, and Kotlin.
+                    I am seeking opportunities to further develop my skills and contribute
                     to innovative projects.
                 </p>
                 <a href="files/ZdebskaKateryna.pdf" download="ZdebskaKaterynaCV">
@@ -69,12 +71,17 @@
                     <div class="soft-skills">
                         <h3>Soft Skills</h3>
                         <p>
-                            I have developed strong soft skills through my experience working on various school projects,
-                            particularly in the areas of teamwork and time management. I have collaborated effectively with
-                            team members, contributing to the successful completion of group tasks and projects. Additionally,
-                            I have demonstrated the ability to prioritize tasks, meet deadlines, and efficiently manage my time
-                            to ensure project milestones are achieved. These skills have allowed me to effectively contribute
-                            to the success of team projects and deliver high-quality results.
+                            I have developed strong soft skills through my experience working on various school projects.
+                        </p>
+                        <p>
+                            On top of the most important ones, I'd like to highlight my excellent <b>problem-solving</b> skills,
+                            <b>attention to details</b>, and ability to work well in a team enviroment. Also as a <b>fast learner</b>, I can quickly
+                            adapt to new workspaces and solve the challenges that are always on the way of a person who is
+                            immersed in a fast growing industry.
+                        </p>
+                        <p>
+                            I also can't fail to mention that the university helped me to master the skill of <b>time management</b> and 
+                            the ability to <b>work under pressure</b>. Now I am able to <b>prioritize tasks</b> and meet deadlines effectively.
                         </p>
                     </div>
                     <div class="tech-skills">
@@ -136,7 +143,7 @@
 
                                 <h3>Pac-man</h3>
                                 <p>
-                                    PC game developed using Java and Swing. Implemented game logic, graphics rendering,
+                                    PC game developed using Java and JavaFX. Implemented game logic, graphics rendering,
                                     and user input handling features.
                                 </p>
                                 <a href="https://github.com/IJA-project/Pac-man" target="_blank">View on GitHub</a>
@@ -161,10 +168,10 @@
             <section id="education">
                 <h2>Education</h2>
                 <p>
-                    I am currently pursuing a Bachelor's degree in Computer Science at <span><a href="https://www.fit.vut.cz/.en">XYZUniversity</a></span><br> I have completed
-                    coursework in data structures, algorithms, software engineering, and database management. I have
+                    I am currently pursuing a Bachelor's degree in Computer Science at <span><a href="https://www.fit.vut.cz/.en">BUT University</a></span><br>
+                    My courses included data structures, algorithms, software engineering, and database management. D uring the program I have
                     developed a strong foundation in computer science principles and programming concepts through my
-                    coursework and projects. I am eager to continue learning and expanding my knowledge in the field of
+                    coursework and projects. So now I want to continue learning and expanding my knowledge in the field of
                     computer science.
                 </p>
                 <span class="years">3-rd year</span>
@@ -187,9 +194,9 @@
                             <img src="img/hob1.jpg" alt="">
                         </div>
                         <h3>Reading</h3>
-                        <p>Reading is one of my favorite hobbies. I enjoy reading a variety of genres, including fiction, fantasy,
-                        and science fiction. I find reading to be a relaxing and enjoyable way to unwind and escape into
-                        different worlds and stories.
+                        <p>Reading is one of my favorite hobbies, especially when it comes to fiction, fantasy,
+                             and science fiction genres.  I find that through reading, I not only unwind and relax,
+                              but also enhance my mental strength, making it a valuable tool for personal growth.
                         </p>
                     </div>
                     <div class="section-item">
@@ -197,8 +204,10 @@
                             <img src="img/hob2.jpg" alt="">
                         </div>
                         <h3>Crocheting</h3>
-                        <p>Crocheting is a creative hobby that I enjoy in my free time. I find it to be a relaxing and meditative
-                        activity that allows me to express my creativity and create beautiful and unique pieces.
+                        <p>Not long ago, I discovered crocheting as a creative hobby.
+                            This interest allows me to create something unique and stylish.
+                            I also find this hobby beneficial because it allows me to think through tasks
+                             subconsciously, which opens up a different perspective on them.
                         </p>
                     </div>
                     <div class="section-item">
@@ -206,9 +215,10 @@
                             <img src="img/hob3.jpg" alt="">
                         </div>
                         <h3>Chess</h3>
-                        <p>Chess is a strategic game that I enjoy playing in my free time. I find it to be a challenging and
-                        intellectually stimulating activity that helps me to improve my critical thinking and problem-solving
-                        skills.
+                        <p>This strategic game is one I've been playing since I was a kid. 
+                            For me, chess is not just a game where I've achieved many victories. They've 
+                            also taught me to think strategically and anticipate moves ahead — valuable skills
+                             that have proven priceless not only over the board but also in life.
                         </p>
                     </div>
                 </div>
