small text fixes + new cv

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     I am seeking opportunities to further develop my skills and contribute
                     to innovative projects.
                 </p>
-                <a href="files/ZdebskaKateryna.pdf" download="ZdebskaKaterynaCV">
+                <a href="files/ZdebskaKaterynaCV.pdf" download="ZdebskaKaterynaCV">
                     DOWNLOAD CV
                   </a>
             </section>
@@ -143,7 +143,7 @@
 
                                 <h3>Pac-man</h3>
                                 <p>
-                                    PC game developed using Java and JavaFX. Implemented game logic, graphics rendering,
+                                    PC game developed using Java and Swing. Implemented game logic, graphics rendering,
                                     and user input handling features.
                                 </p>
                                 <a href="https://github.com/IJA-project/Pac-man" target="_blank">View on GitHub</a>
@@ -169,7 +169,7 @@
                 <h2>Education</h2>
                 <p>
                     I am currently pursuing a Bachelor's degree in Computer Science at <span><a href="https://www.fit.vut.cz/.en">BUT University</a></span><br>
-                    My courses included data structures, algorithms, software engineering, and database management. D uring the program I have
+                    My courses included data structures, algorithms, software engineering, and database management. During the program I have
                     developed a strong foundation in computer science principles and programming concepts through my
                     coursework and projects. So now I want to continue learning and expanding my knowledge in the field of
                     computer science.
@@ -231,7 +231,7 @@
                     <ul>
                         <li>Name: Zdebska Kateryna</li>
                         <li><a href="mailto:zdebska.kateryna@gmail.com">Email: zdebska.kateryna@gmail.com</a></li>
-                        <li>Phone: 123-456-7890</li>
+                        <li>Phone: 774-601-484</li>
                     </ul>
                 </div>
 
